Fix des friends timestamp (#539)
* fix: improve UUID comparison in getOther method

* fix: simplify friend query logic and improve readability